// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Editor has a helptext 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div><span class="form-text">Type something</span>
</div>
`;

exports[`Field Editor has a key 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor has a label 1`] = `
<div class="form-group" data-field-name="textField"><label>label </label>
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor has a placeholder 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" data-placeholder="Placeholder" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor has a spritemap 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor has a value 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor">value</div>
    </div>
  </div>
</div>
`;

exports[`Field Editor has an id 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor is not required 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor is readOnly 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor renders Label if showLabel is true 1`] = `
<div class="form-group" data-field-name="textField"><label>text </label>
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;

exports[`Field Editor triggers AlloyEditor actionPerformed method 1`] = `
<div class="form-group" data-field-name="textField">
  <div class="field-type-editor form-control input-group-container">
    <div class="alloy-editor-container input-group" id="textFieldContainer">
      <div class="alloy-editor alloy-editor-placeholder" contenteditable="false" id="textFieldEditorContainer" name="textFieldEditor"></div>
    </div>
  </div>
</div>
`;
